<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="app_name">CaretakerMe</string>

    <string name="pref_latitude">storedLatitude</string>
    <string name="pref_longitude">storedLongitude</string>

    <string name="emergency_contacts">Emergency Contacts</string>

    <string name="title_vet_finder">Find a Vet</string>
    <string name="title_new_pet">New Pet</string>
    <string name="title_contacts">Emergency Contacts</string>

    <string name="button_emergency_contacts">Emergency Contacts</string>
    <string name="button_find_vet">Find a Vet Now</string>

    <string name="action_add_pet">New Pet</string>
    <string name="action_remove_pet">Remove Pet</string>
    <string name="action_share_pet">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_privacy">Privacy Policy</string>
    <string name="action_caresheet">Share CareSheet</string>

    <string name="name_title">Pet name:</string>
    <string name="breed_title">Breed:</string>
    <string name="meds_title">Medications:</string>
    <string name="other_title">Other/Special Instructions:</string>
    <string name="microchip_title">Microchip ID:</string>

    <string name="edittext_name_hint">Pet Name</string>
    <string name="edittext_breed_hint">Breed</string>
    <string name="edittext_diet_hint">Diet</string>
    <string name="edittext_meds_hint">Medication and doses</string>
    <string name="edittext_microchip_hint">Microchip ID</string>
    <string name="edittext_other_hint">Other instructions</string>

    <string name="email_subject_contacts">Notification from CaretakerMe</string>
    <string name="share_contacts_header">Notify your emergency contact.</string>
    <string name="share_message_contact">Hello, Just a quick note to let you know I have added you as an emergency caretaker for my pets.</string>
    <string name="email_subject_caresheet">Pet Care Sheet</string>
    <string name="share_caresheet_header">Email your pets caresheet</string>

    <string name="notify_title">Contact Removed</string>

    <string name="pet_selection">Pets to add to Caresheet:</string>

    <string name="startup_text">Add a pet by accessing the menu and selecting <xliff:g id="q1">"</xliff:g>New Pet<xliff:g id="q">"</xliff:g></string>
    <string name="formatted_pet_one">I have 1 pet</string>
    <string name="formatted_pet_count">I have <xliff:g id="pet_num">%s</xliff:g> pets</string>
    <string name="pet_contact_header">Select up to 3 emergency caretakers for your pets</string>

    <string name="remove">Remove Pet</string>
    <string name="send">Send Caresheet</string>
    <string name="cancel">Cancel</string>

    <string name="service_not_available">Location Service not enable or no connection is available.</string>
    <string name="okay">Okay</string>

    <string name="text_here">You are here</string>
    <string name="text_open">Open</string>
    <string name="text_closed">Closed</string>
    <string name="text_unknown">Unknown</string>

    <string name="notify_single">A contact was removed from CaretakerMe</string>
    <string name="notify_multiple">contacts were removed from CaretakerMe</string>

    <string name="spinner_title_species">My pet is a:</string>
    <string-array name="array_species">
        <item>Cat</item>
        <item>Dog</item>
        <item>Bird</item>
        <item>Lizard</item>
        <item>Ferret</item>
        <item>Panda</item>
    </string-array>

    <string name="spinner_title_color">Color:</string>
    <string-array name="array_color">
        <item>N/A</item>
        <item>Black</item>
        <item>Brown</item>
        <item>White</item>
        <item>Yellow</item>
        <item>Grey</item>
        <item>Red</item>
        <item>Calico</item>
        <item>Tortoise Shell</item>
        <item>Spotted</item>
        <item>Multi-Colored</item>
    </string-array>


    <string name="spinner_title_frequency">My pet eats:</string>
    <string-array name="array_frequency">
        <item>Food stays out</item>
        <item>Daily</item>
        <item>Twice a day</item>
        <item>Other (see Special Instructions)</item>
    </string-array>


    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">garrison.caretakerme.com</string>
    <string name="content_authority">com.garrison.caretakerme</string>

    <string name="broadcast_vet_data">com.garrison.caretakerme.broadcast</string>
    <string name="broadcast_vet_message">broadcast_vet_message</string>


    <!-- Google Places API Keys -->
    <string name="api_key_sync_server">AIzaSyBKc-I8XL5qI9lZady7D-fTtp0yZ652hww</string>
    <string name="api_key_sync_browser">AIzaSyBmOJLOl_H9p2biJlv2vO6XI0q0W27IICU</string>
    <string name="api_key_sync_android">AIzaSyCy5wOLJrRpcElXYuRA8YlFvZCYYpNCijQ</string>

    <string name="api_key_maps">AIzaSyCy5wOLJrRpcElXYuRA8YlFvZCYYpNCijQ</string>

</resources>
